--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-concat-js": "^0.1.0",
     "gulp-csso": "^3.0.0",
     "gulp-eslint": "^4.0.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify-cli": "^0.1.7",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "pump": "^1.0.2"
   }
 }
