--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-latest": "^6.24.1",
+    "browser-sync": "^2.18.13",
     "eslint-config-gulp": "^2.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
